More ch. 2 text: set/transformation defs.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -35,5 +35,13 @@
   Here and throughout this chapter, pitch classes are represented as mod-12
   integers, with C $= 0$; all calculations are performed mod-12.}
 
+\fntext{tf-7}{%
+  Hook himself makes this clear, noting that for any two sets S and
+  T it is possible to define a single-type transformation in the set
+  S $\cup$ T. He also notes that even when a single-type
+  transformation is possible, ``the cross-type approach is often
+  simpler and more natural,'' which certainly seems to be the case
+  here. \headlesscite[5n8]{hook:2007}.}
+
 
 % }}}
