--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -221,6 +221,7 @@
 % text shortcuts
 \newcommand{\tf}{\mbox{ii--V}}
 \newcommand{\tfo}{\mbox{ii--V--I}}
+\newcommand{\tft}{TF\tsub{T}}
 \newcommand{\slideS}{\textsc{slide}\textsuperscript{7}}
 \newcommand{\tsub}{\textsubscript}
 \newcommand{\tsup}{\textsuperscript}
