Update graphics for chapter 2.
The graphics necessitated a bit of extra text/footnotes. Also some minor
updates to the bibliography.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -19,6 +19,11 @@
   \tfo\ in \Bflat\ followed by a \tfo\ in the relative minor, connected by a
   major seventh chord.}
 
+\fntext{tf-2a}{%
+  The triangle on the C chord in this figure indicates a major seventh. We use
+  the triangle rather than “\h{maj7}” or “\h{M7}” to save space and reduce
+  clutter in the graphical representations.}
+
 \fntext{tf-3}{%
   Lewin’s definition of a transformation network is in
   \headlesscite[196]{lewin:gmit}. For a relatively concise summary, see
@@ -34,6 +39,10 @@
 \fntext{tf-6}{%
   Here and throughout this chapter, pitch classes are represented as mod-12
   integers, with C $= 0$; all calculations are performed mod-12.}
+
+\fntext{tf-6a}{%
+  This figure represents what Joseph Straus calls “transformational voice
+  leadings” in his study of atonal voice leading; \headlesscite{straus:2003}.}
 
 \fntext{tf-7}{%
   Hook himself makes this clear, noting that for any two sets S and
