--- a/diss.bib
+++ b/diss.bib
@@ -330,7 +330,8 @@ Theory} }
   author      = {Hook, Julian},
   title       = {Generic Sequences and the Generic \emph{Tonnetz}},
   journal     = {Oxford Handbooks Online},
-  year        = {2014}
+  year        = {2014},
+  url         = {http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199935321.001.0001/oxfordhb-9780199935321-e-003}
 }
 
 @inproceedings{hook:heptachords,
@@ -685,7 +686,7 @@ Theory} }
   journal     = {Music Theory Spectrum},
   volume      = {25},
   number      = {2},
-  pages       = {305--352},
+  pages       = {305--52},
   month       = oct,
   year        = {2003}
 }
