Finish ii-V formalism (for now).

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -52,5 +52,21 @@
   simpler and more natural,'' which certainly seems to be the case
   here. \headlesscite[5n8]{hook:2007}.}
 
+\fntext{tf-8}{%
+  It would be possible to form a \gis\ by considering all ordered triples as
+  the group, as suggested above. While this is possible, defining an interval
+  function in this group is much more difficult: such a function would need to
+  account for the 36 ordered triples in \tf\ space (ii\tsup{7}, V\tsup{7}, and
+  I\tsup{7} chords) as well as the many more (1692) that are not included in the
+  space. Such a function is conceivable, but would not in any case reflect the
+  musical realities \tf\ space is interested in portraying.}
+
+\fntext{tf-9}{%
+  \tf\ space is a directed graph, so in circumstances where the pitch-class
+  distance metric is somehow not sufficient, we can instead rely on the
+  standard way of measuring distance in a directed graph: by counting the
+  number of edges in the shortest path between two chords. The distance from
+  ii\tsup{7} of C to V\tsup{7} of \Eflat\ is then 4: ii to V in C (1 edge),
+  then 3 $T_5$s to V of \Eflat.}
 
 % }}}
