Add Ceora analysis.
This will need to be rewritten, at least in part.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -69,4 +69,11 @@
   ii\tsup{7} of C to V\tsup{7} of \Eflat\ is then 4: ii to V in C (1 edge),
   then 3 $T_5$s to V of \Eflat.}
 
+\fntext{tf-10}{%
+  In this figure, the circle indicates the tonic, while the numbers on the labels
+  indicate the order of transformations.}
+
+\fntext{tf-11}{%
+  We will return to the concept of tritone substitutes in the next section.}
+
 % }}}
