--- a/ch2.tex
+++ b/ch2.tex
@@ -263,7 +263,74 @@ pitch-class distance is sufficient in most situations.\fn{tf-9}
 \FloatBarrier
 % {{{
 
-% xxx Text on ceora goes here.
+% xxx This whole section should probably be rewritten
+
+Though we will return to the formalism a bit later, we have defined enough of
+\tf\ space at this point to see how it might be useful in analysis. To do so,
+we will look at Lee Morgan's composition ``Ceora,'' first recorded on the
+album \emph{Cornbread} from 1965.\nocite{morgan:cornbread} The changes for the
+A section are given in Example \ref{tf:ceora-changes-1}, and the accompanying
+moves in \tf\ space are shown in Figure \ref{tf:ceora-space-1}.\fn{tf-10} ``Ceora'' is
+in the key of \Aflat\ major, and begins with the progression I--ii--V--I in
+the first three bars, staying within a single horizontal slice of \tf\ space.
+This is followed immediately by a \tfo\ progression in \Dflat, a fifth lower
+(mm.~4--5).
+
+\exBeg[thbp]
+  \centerGraphic[width=24em]{eps/ch2/ceora-changes-1.pdf}
+  \caption{Changes for the A section of ``Ceora'' (Lee Morgan).}
+  \label{tf:ceora-changes-1}
+\exEnd
+
+\figBeg[htbp]
+  \centerGraphic{eps/ch2/ceora-space-1.pdf}
+  \caption{The A section of ``Ceora'' in \tf\ space.}
+  \label{tf:ceora-space-1}
+\figEnd
+
+At this point, we might expect the \tf{}s to continue in descending fifths,
+but the potential ii\tsup{7} chord in \Gflat\ is substituted with \h{Dm7}, its
+tritone substitute, which then resolves as a \tf\ in C.\fn{tf-11} Instead of
+resolving to C major in m.~7, this \tf\ resolves instead to C \emph{minor}:
+both the seventh and third of the expected \h{CM7} are lowered to become
+\h{Cm7}. (This progression is extremely common, and is one of the principal
+means of maintaining harmonic motion in the course of a jazz tune.)
+
+A similar progression in \Bflat\ follows, leading to a \h{Bbm7} chord in m.~9.
+We then hear a \tf\ progression in the tonic in mm.~9--10, but the
+expected \h{AbM7} does not materialize; the \h{Eb7} chord moves instead to
+\h{Cm7} as ii of \Bflat\ (a northwesterly move in the space). This
+progression repeats in mm.~11--13, leading once again to the \h{Dm7} chord
+first heard in m.~5. The repeated upward motions in the space have the
+effect of ramping up the tonal tension in the passage; not only do the
+dominants fail to resolve as expected, but their stepwise rising motion take
+the music far away from the tonic \Aflat. To release this harmonic tension,
+the \tf\ in C resolves at m.~15 to C minor, at which point the harmonic rhythm
+doubles and the progression follows the normal descending fifths pattern to
+reach the tonic that begins the B section in m.~17.
+
+The B section of ``Ceora'' (shown in Example \ref{tf:ceora-changes-2}) begins
+in exactly the same way as the A section. The only differences in the first
+twelve measures are the addition of the \h{b5} in the \h{Cm7} and the \h{s9}
+in the \h{F7} in mm.~11--12. Because we have defined chords and transformations
+only in terms of chordal roots, thirds, and sevenths, neither of these changes
+affect our transformational reading of the passage. Instead of ramping up to
+ii\tsup{7} of C as in the A section, the \tf\ in \Bflat\ resolves to \h{Bbm7}
+at the beginning of the second ending. This \h{Bbm7} become the ii chord of a
+\tfo\ in tonic, resolving in m.~15 of the section. A final \tf\ in the last
+measure provides additional harmonic  interest, and functions as a turnaround
+to lead smoothly back to \h{AbM7} to begin the next chorus.
+
+\exBeg[htbp]
+  \centerGraphic[width=24em]{eps/ch2/ceora-changes-2.pdf}
+  \caption{Changes for the B section of ``Ceora'' (Lee Morgan).}
+  \label{tf:ceora-changes-2}
+\exEnd
+
+
+
+% Probably also need some text about what thinking in two-five space actually
+%   does for us.
 
 % }}}
 % }}}
