Move bib resources to main file.
This plays nicer with reftex.

--- a/diss.tex
+++ b/diss.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt,oneside]{book}
 \usepackage{mjmdiss}
+\addbibresource{diss.bib}
+\addbibresource{discog.bib}
 
 % notes files, must go before document begin
 \input{ch1-notes}
