Minor changes to Ceora analysis.

--- a/ch2.tex
+++ b/ch2.tex
@@ -309,17 +309,17 @@ the \tf\ in C resolves at m.~15 to C minor, at which point the harmonic rhythm
 doubles and the progression follows the normal descending fifths pattern to
 reach the tonic that begins the B section in m.~17.
 
-The B section of ``Ceora'' (shown in Example \ref{tf:ceora-changes-2}) begins
-in exactly the same way as the A section. The only differences in the first
-twelve measures are the addition of the \h{b5} in the \h{Cm7} and the \h{s9}
-in the \h{F7} in mm.~11--12. Because we have defined chords and transformations
-only in terms of chordal roots, thirds, and sevenths, neither of these changes
-affect our transformational reading of the passage. Instead of ramping up to
-ii\tsup{7} of C as in the A section, the \tf\ in \Bflat\ resolves to \h{Bbm7}
-at the beginning of the second ending. This \h{Bbm7} become the ii chord of a
-\tfo\ in tonic, resolving in m.~15 of the section. A final \tf\ in the last
-measure provides additional harmonic  interest, and functions as a turnaround
-to lead smoothly back to \h{AbM7} to begin the next chorus.
+The B section of ``Ceora'' (shown in Example \ref{tf:ceora-changes-2}) follows
+much of the same trajectory as the A section until the last four bars; the
+only differences are the addition of the \h{b5} in the \h{Cm7} and the \h{s9}
+in the \h{F7} in mm.~11--12 of the section. Because we have defined chords and
+transformations only in terms of chordal roots, thirds, and sevenths, neither
+of these changes affect our transformational reading of the passage. Instead
+of ramping up to ii\tsup{7} of C as in the A section, the \tf\ in \Bflat\
+resolves to \h{Bbm7} in m.~12. This \h{Bbm7} becomes the ii chord of a \tfo\
+in tonic, resolving in m.~15 of the section. A final \tf\ in the last measure
+provides additional harmonic interest, and functions as a turnaround to lead
+smoothly back to \h{AbM7} to begin the next chorus.
 
 \exBeg[htbp]
   \centerGraphic[width=24em]{eps/ch2/ceora-changes-2.pdf}
@@ -328,11 +328,13 @@ to lead smoothly back to \h{AbM7} to begin the next chorus.
 \exEnd
 
 
-
 % Probably also need some text about what thinking in two-five space actually
 %   does for us.
 
 % }}}
 % }}}
 
+%%% Local Variables:
+%%% TeX-master: "diss"
+%%% End:
 % vim:fdm=marker
