Include text on why ii-V space is useful.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -69,11 +69,30 @@
   ii\tsup{7} of C to V\tsup{7} of \Eflat\ is then 4: ii to V in C (1 edge),
   then 3 $T_5$s to V of \Eflat.}
 
+
 \fntext{tf-10}{%
-  In this figure, the circle indicates the tonic, while the numbers on the labels
-  indicate the order of transformations.}
+  These changes are taken from \emph{The Real Book}, and reflect what is
+  played on the album \emph{Cornbread}.\nocite{morgan:cornbread} In this figure,
+  the circle indicates the tonic, while the numbers on the labels indicate the
+  order of transformations.}
 
 \fntext{tf-11}{%
   We will return to the concept of tritone substitutes in the next section.}
 
+\fntext{tf-12}{%
+  For a study of many different musical spaces (and a defense of their
+  use), see \cite[Chapter 1 and throughout]{hook:mst}.}
+
+\fntext{tf-13}{%
+  Music analysis is in many ways similar to the field of data visualization:
+  both often involve revealing the underlying structure of what might otherwise
+  seem like an undifferentiated stream of data. As Edward Tufte tells us,
+  visualizations are often ``more precise and revealing'' than other,
+  mathematical means of analyzing data. \headlesscite[13--14]{tufte:2001}.}
+
 % }}}
+
+%%% Local Variables: %%%
+%%% mode: LaTeX %%%
+%%% TeX-master: "diss" %%%
+%%% End: %%%
