--- a/ch2.tex
+++ b/ch2.tex
@@ -268,13 +268,12 @@ pitch-class distance is sufficient in most situations.\fn{tf-9}
 Though we will return to the formalism a bit later, we have defined enough of
 \tf\ space at this point to see how it might be useful in analysis. To do so,
 we will look at Lee Morgan's composition ``Ceora,'' first recorded on the
-album \emph{Cornbread} from 1965.\nocite{morgan:cornbread} The changes for the
-A section are given in Example \ref{tf:ceora-changes-1}, and the accompanying
-moves in \tf\ space are shown in Figure \ref{tf:ceora-space-1}.\fn{tf-10} ``Ceora'' is
-in the key of \Aflat\ major, and begins with the progression I--ii--V--I in
-the first three bars, staying within a single horizontal slice of \tf\ space.
-This is followed immediately by a \tfo\ progression in \Dflat, a fifth lower
-(mm.~4--5).
+album \emph{Cornbread} from 1965. The changes for the A section are given in
+Example \ref{tf:ceora-changes-1}, and the accompanying moves in \tf\ space are
+shown in Figure \ref{tf:ceora-space-1}.\fn{tf-10} ``Ceora'' is in the key of
+\Aflat\ major, and begins with the progression I--ii--V--I in the first three
+bars, staying within a single horizontal slice of \tf\ space. This is followed
+immediately by a \tfo\ progression in \Dflat, a fifth lower (mm.~4--5).
 
 \exBeg[thbp]
   \centerGraphic[width=24em]{eps/ch2/ceora-changes-1.pdf}
@@ -327,9 +326,30 @@ smoothly back to \h{AbM7} to begin the next chorus.
   \label{tf:ceora-changes-2}
 \exEnd
 
+At this point, we have successfully mapped all of the chords in ``Ceora'' to
+their associated locations in \tf\ space; it is reasonable to ask, though,
+whether this mapping of chords to space locations should even count as
+``analysis.'' After all, \tf\ space contains each minor, dominant, and major
+seventh chord exactly once, so we did not even need to make any decisions as
+to where in the space a particular chord should go. Have we, in fact, learned
+anything about ``Ceora'' from our exploration of \tf\ space?
 
-% Probably also need some text about what thinking in two-five space actually
-%   does for us.
+The answer, I think, is yes. Although we could criticize \tf\ space for being
+simply a particular arrangement of common harmonic progressions in jazz,
+similar arrangements have proven themselves useful in many areas of music
+theory: the circle of fifths, the Neo-Riemannian Tonnetz, the pitch-class
+``clock face,'' and countless others.\fn{tf-12} One of the benefits of \tf\
+space is that it allows us to easily visualize harmonic motions in jazz. The
+succession of chord symbols that make up the changes to ``Ceora'' may make
+immediate sense to an experienced jazz musician, but \tf\ space allows others
+to to make sense of these relationships more clearly. The fact that our
+analysis in \tf\ space may seem obvious is in fact a feature, not a bug; such
+a criticism reveals that \tf\ space, with all its mathematical formalism,
+can clarify information that may otherwise remain hidden in the raw data of
+the chord symbols.\fn{tf-13}
+
+
+
 
 % }}}
 % }}}
