--- a/diss.bib
+++ b/diss.bib
@@ -351,7 +351,7 @@ Theory} }
 
 @book{hook:mst,
   author      = {Hook, Julian},
-  title       = {Musical Spaces and Transformations},
+  title       = {Exploring Musical Spaces},
   address     = {New York},
   publisher   = {Oxford University Press},
   year        = {forthcoming}
@@ -709,6 +709,15 @@ Theory} }
   volume      = {8},
   pages       = {63--115},
   year        = {1996}
+}
+
+@book{tufte:2001,
+  author      = {Tufte, Edward},
+  title       = {The Visual Display of Quantitative Information},
+  address     = {Cheshire, CT},
+  publisher   = {Graphics Press},
+  edition     = {2nd},
+  year        = {2001}
 }
 
 @article{tymoczko:1997,
